add Index.HTML and css files

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,7 +14,7 @@
                         <a class="nav-a" href="Index.HTML">Home</a>
                     </li>
                     <li class="nav-li">
-                        <a class="nav-a" href="portfolio.html">Portfolio</a>
+                        <a class="mav-a" href="Portfolio.html">Portfolio</a>
                     </li>
                 </ul>
             </nav>
