--- a/portfolio.html
+++ b/portfolio.html
@@ -11,10 +11,10 @@
                 <h1>Jenni's Website</h1>
                 <ul id="nav-ul">
                     <li class="nav-li">
-                        <a class="nav-a" href="Index.HTML">Home</a>
+                        <a class="nav-a" href="index.html">Home</a>
                     </li>
                     <li class="nav-li">
-                        <a class="mav-a" href="Portfolio.html">Portfolio</a>
+                        <a class="mav-a" href="portfolio.html">Portfolio</a>
                     </li>
                 </ul>
             </nav>
