--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <h1>Jenni's Website</h1>
                 <ul id="nav-ul">
                     <li class="nav-li">
-                        <a href="Index.HTML"> Home</a>
+                        <a href="index.html"> Home</a>
                     </li>
                     <li class="nav-li">
-                        <a href="Portfolio.html"> Portfolio </a>
+                        <a href="portfolio.html"> Portfolio </a>
                     </li>
                 </ul>
 
