--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,15 +8,14 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(255, 250, 175);
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
-		}
+			left: 0px;  /* <--- Change me! */		}
 		.board{
 			height: 100vh;
 		}
@@ -27,8 +26,8 @@
 <body class="board">
 	<!-- HTML for the box -->
 	<div class="box">?</div>
-
-	<script>
+<img width="100%" src="https://uploads-ssl.webflow.com/5a9423a3f702750001758d4f/63429ed92c7f35228f2652df_Perfume.svg"/>
+<script>
 		(function(){
 			'use strict'
 			/* global jQuery */
@@ -48,8 +47,9 @@
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX, newPositionY) {
 				box.css("left", newPositionX);
+				box.css("top", newPositionY);
 			}
 
 			// changes the text displayed on the Box
@@ -62,7 +62,13 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
+			var speed = 10;
+			var points = 0;
+			var positionX = 0;
+			var positionY = 0;
+			var speedY = 10;
+			var boardHeight = jQuery(window).height(); 
+			var randNum = Math.random() * 100;
 
 			
 			/* 
@@ -71,7 +77,21 @@
 			turn it around! 
 			*/
 			function update() {
-				
+				positionX = positionX + speed;
+				moveBoxTo(positionX, positionY);
+				if (positionX > boardWidth) {
+					speed *= -1
+				}
+				else if (positionX < 0) {
+					speed *= -1
+				}
+				positionY = positionY + speed;
+				if (positionY > boardHeight){
+					speed*= -1
+				}
+				else if (positionY < 0){
+					speed *= -1
+				}
 
 			};
 
@@ -81,7 +101,12 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
+				speed = speed + 3;
+				points = points + 1;
+				positionX = 0;
+				positionY = 0;
+				changeBoxText(points);
+
 
 
 			};
