--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Jenni's Website</title>
+        <title>Jennifer Ocana</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
