--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Jenni's Website</title>
+        <title>Jennifer Ocana</title>
         <link rel="stylesheet" href="style.css"> 
     </head>
 
