--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--All content goes here-->
         <div  <id="all-contents"></id>
             <nav>
-                <h1>Jenni's Website</h1>
+                <h1>Jennifer Ocana</h1>
                 <ul id="nav-ul">
                     <li class="nav-li">
                         <a href="index.html"> Home</a>
@@ -31,7 +31,8 @@
                 <!-- content-->
                 <div class="content">
                     <h2> Jennifer Ocana </h2>
-                    <P1> Student at IHS </P1>
+                    <P1> Student at Southeastern Louisiana University </P1>
+                    <P2> Majoring in Computer Science with a pathway towards earning an MBA (Masters in Business Administration</P2>
                     <!-- Interests Section-->
                     <div id="Interests"> 
                         <h3>Interests</h3>
