--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <body>
         <div id="all-contents">
             <nav>
-                <h1>Jenni's Website</h1>
+                <h1>Jennifer Ocana</h1>
                 <ul id="nav-ul">
                     <li class="nav-li">
                         <a class="nav-a" href="index.html">Home</a>
