--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                 <!-- content-->
                 <div class="content">
                     <h2> Jennifer Ocana </h2>
-                    <P1> Student at Southeastern Louisiana University </P1>
-                    <P2> Majoring in Computer Science with a pathway towards earning an MBA (Masters in Business Administration</P2>
+                    <ul>
+                        <li> Student at SOutheastern Louisiana University</li>
+                        <li> Majoring in Computer Science with a pathway towards earning an MBA (Masters in Business Administration</li>
+                    </ul>
                     <!-- Interests Section-->
                     <div id="Interests"> 
                         <h3>Interests</h3>
