--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 <!-- content-->
                 <div class="content">
                     <h2> Jennifer Ocana </h2>
+                    <!-- About Me -->
+                    <div id="About Me">
                     <ul>
                         <li> Student at SOutheastern Louisiana University</li>
                         <li> Majoring in Computer Science with a pathway towards earning an MBA (Masters in Business Administration</li>
