--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
                     <h2> Jennifer Ocana </h2>
                     <!-- About Me -->
                     <div id="About Me">
+                        <h3>About Me</h3>
                     <ul>
-                        <li> Student at SOutheastern Louisiana University</li>
+                        <li> Student at Southeastern Louisiana University</li>
                         <li> Majoring in Computer Science with a pathway towards earning an MBA (Masters in Business Administration</li>
                     </ul>
                     <!-- Interests Section-->
                     <div id="Interests"> 
-                        <h3>Interests</h3>
+                        <h4>Interests</h4>
                         <ul>
                             <li>Music</li>
                             <li>Clothes</li>
