--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     <div id="About Me">
                         <h3>About Me</h3>
                     <ul>
-                        <li> Student at Southeastern Louisiana University</li>
-                        <li> Majoring in Computer Science with a pathway towards earning an MBA (Masters in Business Administration</li>
+                        <li> Student at Independence High School</li>
+                        <li> Plans on majoting in Computer Science</li>
                     </ul>
                     <!-- Interests Section-->
                     <div id="Interests"> 
