--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <h3>About Me</h3>
                     <ul>
                         <li> Student at Independence High School</li>
-                        <li> Plans on majoting in Computer Science</li>
+                        <li> Plans to major in Computer Science</li>
                     </ul>
                     <!-- Interests Section-->
                     <div id="Interests"> 
